<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">
    
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_detail_image_height"
        android:id="@+id/appbar"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleMarginStart="48dp"
        app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
        app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/thumbnail_image_header"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />
     </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/movie_title_detail_size"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginLeft="@dimen/movie_detail_margin_left"
                android:layout_marginStart="@dimen/movie_detail_margin_left" />

            <com.github.ivbaranov.mfb.MaterialFavoriteButton
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:mfb_animate_favorite="true"
                app:mfb_animate_unfavorite="false"
                app:mfb_padding="12"
                app:mfb_rotation_duration="400"
                app:mfb_rotation_angle="360"
                app:mfb_bounce_duration="300"
                app:mfb_color="@color/colorAccent"
                app:mfb_type="star"
                app:mfb_size="52"
                android:layout_marginLeft="@dimen/movie_detail_margin_left"
                android:layout_marginTop="@dimen/card_margin_top_title"
               android:layout_below="@+id/title"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/overview"
                android:text="@string/movie_detail"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="@dimen/movie_detail_margin_left"
                android:layout_marginTop="@dimen/card_margin_top_title"
                android:textAlignment="inherit"
                android:textStyle="bold"
                android:textSize="@dimen/movie_secondary_title"
                android:layout_below="@+id/favorite_button"
                android:layout_marginStart="@dimen/movie_detail_margin_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/overviewText"
                android:textColor="@color/colorText"
                android:textSize="@dimen/movie_simple_text"
                android:padding="10dp"
                android:layout_marginTop="@dimen/card_margin_top_title"
                android:layout_marginLeft="@dimen/movie_detail_margin_left"
                android:layout_below="@+id/overview"
                android:layout_marginStart="@dimen/movie_detail_margin_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:textColor="@color/colorAccent"
                android:text="@string/rating"
                android:layout_marginLeft="@dimen/movie_detail_margin_left"
                android:layout_marginTop="@dimen/card_margin_top_title"
                android:textAlignment="inherit"
                android:textStyle="bold"
                android:textSize="@dimen/movie_secondary_title"
                android:layout_below="@+id/overviewText"
                android:layout_marginStart="@dimen/movie_detail_margin_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userText"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/movie_score_size"
                android:padding="10dp"
                android:layout_marginTop="@dimen/card_margin_top_title"
                android:layout_marginLeft="@dimen/movie_detail_margin_left"
                android:layout_below="@+id/rating"
                android:layout_marginStart="@dimen/movie_detail_margin_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/release"
                android:textColor="@color/colorAccent"
                android:text="@string/release"
                android:layout_marginLeft="@dimen/movie_detail_margin_left"
                android:layout_marginTop="@dimen/card_margin_top_title"
                android:textAlignment="inherit"
                android:textStyle="bold"
                android:textSize="@dimen/movie_secondary_title"
                android:layout_below="@+id/userText"
                android:layout_marginStart="@dimen/movie_detail_margin_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/releaseDate"
                android:textSize="@dimen/movie_release_size"
                android:padding="10dp"
                android:layout_marginTop="@dimen/card_margin_top_title"
                android:layout_marginLeft="@dimen/movie_detail_margin_left"
                android:textColor="@color/colorText"
                android:layout_below="@+id/release"
                android:layout_marginStart="@dimen/movie_detail_margin_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/thumbnailUrl"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/trailer"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/movie_secondary_title"
                android:text="@string/trailer"
                android:layout_marginTop="@dimen/card_margin_top_title"
                android:layout_marginLeft="@dimen/movie_detail_margin_left"
                android:layout_below="@+id/releaseDate"
                android:layout_marginStart="@dimen/movie_detail_margin_left" />

            <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view1"
                android:layout_gravity="start"
                app:msrv_snap_count="1"
                app:msrv_gravity="start"
                app:msrv_ms_per_inch="@dimen/normal_speed"
                android:layout_below="@+id/trailer">

            </com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView>

            <TextView
                android:id="@+id/text_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/review"
                android:textColor="@color/colorAccent"
                android:layout_below="@+id/recycler_view1"
                android:layout_marginTop="@dimen/card_margin_top_title"
                android:layout_marginLeft="@dimen/movie_detail_margin_left"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginStart="@dimen/movie_detail_margin_left" />

            <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                android:id="@+id/review_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_below="@id/text_review"
                app:msrv_gravity="center"
                app:msrv_ms_per_inch="@dimen/low_speed"
                app:msrv_snap_count="2" />


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>